<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Horòscop personalitzat</string>
    <string name="action_settings">Configuració</string>
    <string name="novaPersona">Nova persona</string>
    <string name="natal">Veure dades natals</string>
    <string name="transits">Trànsits</string>
    <string name="pSecund">Progressions secundàries</string>
    <string name="dPrim">Direccions primàries</string>
    <string name="dSimb">Direccions simbòliques</string>
    <string name="rSolar">Revolució solar</string>
    <string name="rLunar">Revolució lunar</string>
    <string name="sinastria">Sinastria</string>
    <string name="composta">Carta composta</string>
    <string name="tvNom">Nom</string>
    <string name="tvDia">Dia de naixement</string>
    <string name="tvHora">Hora de naixement</string>
    <string name="tvLatitud">Latitud</string>
    <string name="tvLongitud">Longitud</string>
    <string name="tvAltitud">Altitud (en metres)</string>
    <string name="tvZona">Zona horària</string>
    <string name="tvUT">UT</string>
    <string name="btGravar">Gravar dades</string>
    <string name="erInputNom">Falta informar el nom</string>
    <string name="erInputDia">Falta informar el dia de naixement</string>
    <string name="erInputDiaI">La data de naixement està mal informada</string>
    <string name="erInputHora">Falta informar l\'hora de naixement</string>
    <string name="erInputHoraI">L\'hora de naixement està mal informada</string>
    <string name="erInputLatitud">Falta informar la latitud</string>
    <string name="erInputLatitudI">La latitud està mal informada</string>
    <string name="erInputLongitud">Falta informar la longitud</string>
    <string name="erInputLongitudI">La longitud està mal informada</string>
    <string name="erInputAltitud">Falta informar l\'altitud</string>
    <string name="erInputAltitudI">L\'altitud ha de ser numèrica</string>
    <string name="dadesGravadesIn">Les dades s\'han gravat a la memòria externa</string>
    <string name="dadesGravadesOut">Les dades s\'han gravat a la memòria interna</string>
    <string name="dadesNoGravades">Error al gravar les dades</string>
</resources>
