<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:layout_weight="1">
    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="vertical"

        tools:context=".NovaPersonaFragment">
        <TextView
            android:id="@+id/tvNom"
            android:text="@string/tvNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:gravity="center"
            android:scrollHorizontally="true"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etNom"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:typeface="monospace"
                android:inputType="textPersonName"
                android:text="" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvDia"
            android:gravity="center"
            android:text="@string/tvDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:scrollHorizontally="true"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etDia"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:typeface="monospace"
            android:inputType="date" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvHora"
            android:gravity="center"
            android:text="@string/tvHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:scrollHorizontally="true"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etHora"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:typeface="monospace"
                android:inputType="time" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvLatitud"
            android:gravity="center"
            android:text="@string/tvLatitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:scrollHorizontally="true"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <EditText
            android:id="@+id/etLatitud"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:typeface="monospace"
            android:inputType="time"
            android:text="" />
        <Spinner
            android:id="@+id/spNS"
            android:gravity="center"
            android:typeface="monospace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvLongitud"
            android:gravity="center"
            android:text="@string/tvLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:scrollHorizontally="true"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <EditText
                android:id="@+id/etLongitud"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="9"
                android:typeface="monospace"
                android:inputType="time"
                android:text="" />
            <Spinner
                android:id="@+id/spEW"
                android:gravity="center"
                android:typeface="monospace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvAltitud"
            android:gravity="center"
            android:text="@string/tvAltitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:scrollHorizontally="true"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etAltitud"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:ems="6"
                android:inputType="number" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvZona"
            android:gravity="center"
            android:text="@string/tvZona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:scrollHorizontally="true"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvUT"
                android:gravity="center"
                android:text="@string/tvUT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:scrollHorizontally="true"/>
            <Spinner
                android:id="@+id/spZona"
                android:gravity="center"
                android:typeface="monospace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/btGravar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:text="@string/btGravar"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvFitxer"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:scrollHorizontally="true"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>